[package]
name = "day1"
version = "0.1.0"
authors = ["Yorick <yorick.lesecque@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "advlib"
path = "src/lib.rs"

[[bin]]
name = "advent"
path = "src/main.rs"

[dependencies]
